INTEXT-44: Readme.md, degrading version to 0.5.0-SNAPSHOT